syntax = "proto3";

package video;

service VideoService {
  rpc StreamVideo (VideoRequest) returns (stream VideoChunk) {}
}

message VideoRequest {
  string video_id = 1;
  int32 quality = 2; // 1: low, 2: medium, 3: high
}

message VideoChunk {
  bytes data = 1;
  int32 sequence_number = 2;
  bool is_last_chunk = 3;
  string mime_type = 4;
} 